SERVER-57477 stdx::erase_if for stdx::unordered_map

Fix loops that erase elements of the container while iterating over it.

revert api_version_metrics.cpp